src/test/ui/rfc-1937-termination-trait/termination-trait-not-satisfied.rs
struct ReturnType {}

fn main() -> ReturnType { //~ ERROR `main` has invalid return type `ReturnType`
    ReturnType {}
}
